<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

   <data>

   </data>
   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:background="@color/white"
       android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bmi_calculator.BmiCalculatorFragment">

   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/calculate_bmi"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="56dp"
       android:text="Your BMI Result"
       android:textSize="25sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/underweight_bmi"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/calculate_bmi"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginStart="@dimen/activity_margin"
       android:layout_marginTop="@dimen/double_margin"
      android:text="@string/_18_5"
       style="@style/TextAppearance.StayFit.bodyMedium"
       />
   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/normal_weight"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@+id/underweight_bmi"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginStart="@dimen/activity_margin"
       android:layout_marginTop="@dimen/activity_margin"
       android:text="@string/_18_5_24_9"
       style="@style/TextAppearance.StayFit.bodyMedium"
       />

   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/over_weight"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@+id/normal_weight"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginStart="@dimen/activity_margin"
       android:layout_marginTop="@dimen/activity_margin"
       android:text="@string/_25_29_9"
       style="@style/TextAppearance.StayFit.bodyMedium"
       />

   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/obesity_weight"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@+id/over_weight"
       android:layout_marginStart="@dimen/activity_margin"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginTop="@dimen/activity_margin"
       android:text="@string/_30_34_9"
       style="@style/TextAppearance.StayFit.bodyMedium"
       />

   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/highly_obese"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@+id/obesity_weight"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginStart="@dimen/activity_margin"
       android:layout_marginTop="@dimen/activity_margin"
       android:text="@string/_35_39_9"
       style="@style/TextAppearance.StayFit.bodyMedium"
       />
   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/extreme_obese"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@+id/highly_obese"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginStart="@dimen/activity_margin"
       android:layout_marginTop="@dimen/activity_margin"
       android:text="@string/_40"
       style="@style/TextAppearance.StayFit.bodyMedium"
       />
   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/underweight_bmi_text"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/underweight"
       android:layout_marginEnd="@dimen/activity_margin"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="@+id/underweight_bmi"
       app:layout_constraintBottom_toBottomOf="@+id/underweight_bmi"
       style="@style/TextAppearance.StayFit.bodyLarge"
       />

   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/normal_weight_text"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/normal"
       style="@style/TextAppearance.StayFit.bodyLarge"
       android:textColor="@color/black"
       android:layout_marginEnd="@dimen/activity_margin"
       app:layout_constraintBottom_toBottomOf="@+id/normal_weight"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="@+id/normal_weight" />

   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/overWeightText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/overweight"
       style="@style/TextAppearance.StayFit.bodyLarge"
       android:textColor="@color/black"
       android:layout_marginEnd="@dimen/activity_margin"
       app:layout_constraintBottom_toBottomOf="@+id/over_weight"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="@+id/over_weight" />

   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/obese_text"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/obese"
       style="@style/TextAppearance.StayFit.bodyLarge"
       android:textColor="@color/black"
       android:layout_marginEnd="@dimen/activity_margin"
       app:layout_constraintBottom_toBottomOf="@+id/obesity_weight"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="@+id/obesity_weight" />

   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/highly_obese_text"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/highly_obese"
       style="@style/TextAppearance.StayFit.bodyLarge"
       android:textColor="@color/black"
       android:layout_marginEnd="@dimen/activity_margin"
       app:layout_constraintBottom_toBottomOf="@+id/highly_obese"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="@+id/highly_obese" />

   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/extreme_obese_text"
       style="@style/TextAppearance.StayFit.bodyLarge"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginEnd="@dimen/activity_margin"
       android:text="@string/extremely_obese"
       android:textColor="@color/black"
       app:layout_constraintBottom_toBottomOf="@+id/extreme_obese"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="@+id/extreme_obese" />

   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/bmi_result_descrpition"
       style="@style/TextAppearance.StayFit.bodySmall"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginHorizontal="@dimen/element_spacing"
       android:layout_marginTop="@dimen/extra_double_margin"
       android:textColor="@color/greyColorDark"
       android:layout_marginStart="@dimen/activity_margin"
       android:layout_marginEnd="@dimen/activity_margin"
       app:layout_constraintEnd_toEndOf="@+id/extreme_obese_text"
       app:layout_constraintStart_toStartOf="@+id/extreme_obese"
       app:layout_constraintTop_toBottomOf="@+id/extreme_obese_text"
       tools:text="Your Bmi is Normal.Based on normal Bmi is a Bmi is nOrmal is Bmi test stest lorem ipsum testing,Normal.Based on normal Bmi is a Bmi is nOrmal is Bmi test stest lorem ipsum testing " />

   <Button
       android:id="@+id/nxtBtn"
       style="@style/LargeRoundButton.Primary"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="@dimen/extra_double_margin"
       android:layout_marginBottom="@dimen/activity_margin"
       android:text="@string/general_next"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/bmi_result_descrpition" />
</androidx.constraintlayout.widget.ConstraintLayout>
   </androidx.core.widget.NestedScrollView>
</layout>