<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_margin"
    tools:context=".ui.meal.MealTypeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/meal_type"
        android:text="@string/meal_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/activity_margin"
        style="@style/TextAppearance.StayFit.h4"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/activity_margin"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radiogroup"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/meal_type"
        app:layout_constraintStart_toStartOf="parent">
        <RadioButton
            android:id="@+id/breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breakfast"
            android:layout_marginBottom="@dimen/element_spacing"
            style="@style/TextAppearance.StayFit.bodyMedium"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/meal_type"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/activity_margin"/>
       <RadioButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/lunch"
           android:layout_marginBottom="@dimen/element_spacing"
           app:layout_constraintTop_toBottomOf="@+id/breakfast"
           app:layout_constraintStart_toStartOf="parent"
           android:layout_marginStart="@dimen/activity_margin"
           android:text="@string/lunch"
           style="@style/TextAppearance.StayFit.bodyMedium"
           android:textColor="@color/black"/>

     <RadioButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/dinner"
         android:layout_marginBottom="@dimen/element_spacing"
         app:layout_constraintTop_toBottomOf="@+id/lunch"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="@dimen/activity_margin"
         android:text="@string/dinner"
         />
       <RadioButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/mrngSnack"
           android:layout_marginBottom="@dimen/element_spacing"
           app:layout_constraintTop_toBottomOf="@+id/dinner"
           app:layout_constraintStart_toStartOf="parent"
           android:layout_marginStart="@dimen/activity_margin"
           android:text="@string/morning_snack"
           />


     <RadioButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/evngSnack"
         android:layout_marginBottom="@dimen/element_spacing"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="@dimen/activity_margin"
         android:text="@string/evening_snack"/>

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/extra_double_margin"
        android:layout_marginVertical="@dimen/activity_margin"
        android:background="@drawable/bg_card"
        android:text="@string/cancel"
        style="@style/Widget.App.Button.TextButton.IconOnly"
        app:circularflow_defaultRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup" />






    

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>