<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/recipecard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingVertical="@dimen/element_spacing"
            android:layout_height="wrap_content">

            <com.symeonchen.roundimageview.RoundImageView
                android:id="@+id/recipeView"
                android:src="@drawable/ic_food"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:corner_radius="@dimen/activity_margin"
                android:elevation="@dimen/activity_margin"
                android:layout_marginStart="@dimen/element_spacing"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/recipeName"
                style="@style/TextAppearance.StayFit.bodyLarge"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/activity_margin"
                android:layout_marginTop="@dimen/element_spacing"
                android:text="@string/recipe_name"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/recipeView"
                app:layout_constraintTop_toTopOf="parent" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/recipeDescription"
                style="@style/TextAppearance.StayFit.bodySmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/recipeName"
                app:layout_constraintStart_toStartOf="@+id/recipeName"
                app:layout_constraintTop_toBottomOf="@+id/recipeName" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/calorie"
                style="@style/TextAppearance.StayFit.bodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caloriess"
                android:layout_marginTop="@dimen/element_spacing"
                app:layout_constraintStart_toStartOf="@+id/recipeDescription"
                app:layout_constraintTop_toBottomOf="@+id/recipeDescription" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/calorie_text"
                style="@style/TextAppearance.StayFit.bodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_57kcal"
                app:layout_constraintStart_toEndOf="@id/calorie"
                app:layout_constraintTop_toTopOf="@id/calorie"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/energy_line"
                style="@style/TextAppearance.StayFit.bodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/energyline"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@id/calorie_text"
                app:layout_constraintTop_toTopOf="@id/calorie_text"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/carb"
                style="@style/TextAppearance.StayFit.bodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Carb:"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@id/energy_line"
                app:layout_constraintTop_toTopOf="@id/energy_line"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/carb_text"
                style="@style/TextAppearance.StayFit.bodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3_36g"
                app:layout_constraintStart_toEndOf="@id/carb"
                app:layout_constraintTop_toTopOf="@id/carb"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/carb_line"
                style="@style/TextAppearance.StayFit.bodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carbline"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@id/carb_text"
                app:layout_constraintTop_toTopOf="@id/carb_text"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pro"
                style="@style/TextAppearance.StayFit.bodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/prot"
                app:layout_constraintStart_toEndOf="@id/carb_line"
                app:layout_constraintTop_toTopOf="@id/carb_line"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pro_text"
                style="@style/TextAppearance.StayFit.bodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_58g"
                app:layout_constraintStart_toEndOf="@id/pro"
                app:layout_constraintTop_toTopOf="@id/pro"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pro_line"
                style="@style/TextAppearance.StayFit.bodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proline"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@id/pro_text"
                app:layout_constraintTop_toTopOf="@id/pro_text"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fat"
                style="@style/TextAppearance.StayFit.bodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@id/pro_line"
                app:layout_constraintTop_toTopOf="@id/pro_line"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fat_text"
                style="@style/TextAppearance.StayFit.bodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_58g"
                app:layout_constraintStart_toEndOf="@id/fat"
                app:layout_constraintTop_toTopOf="@id/fat"/>













        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>