<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.account.AddHeightFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addheight_field"
            style="@style/Widget.App.TextInputLayout.Default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_margin"
            android:layout_marginTop="@dimen/extra_margin"
            android:hint="@string/height"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_height">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/height_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/button2"
            style="@style/Widget.App.Button.TextButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cms"
            android:layout_marginEnd="@dimen/activity_margin"
            app:layout_constraintBottom_toBottomOf="@+id/addheight_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/addheight_field" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updateBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/extra_double_margin"
            android:layout_marginVertical="@dimen/activity_margin"
            android:layout_marginStart="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_card"
            android:text="@string/update"
            app:circularflow_defaultRadius="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addheight_field" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
